src/components/manage/Blocks/SiteHabitatsList/style.less
div#view .site-habitats-list .habitats-group-filter .ui.container > *,
div#view .site-habitats-list .habitats-filters .ui.container > *,
div#view .site-habitats-list .habitats-list .ui.container > * {
  margin-bottom: 0;
}

.site-habitats-list {
  margin-top: -1em;

  .habitats-filters {
    .ui.container {
      display: flex;
      align-items: center;
      justify-content: space-between;

      .active-filters {
        display: flex;
        margin-top: 0;
        gap: 0.5rem;

        .ui.label.active-filter {
          display: inline-flex;
          flex-flow: row;
          align-items: center;
          border: 1px solid #c5c5c5;
          border-radius: 18px;
          background-color: #fff;
          color: #000;
          font-weight: 400;

          svg.icon {
            margin-right: 0;
            margin-left: 0.5rem;
            cursor: pointer;
          }
        }
      }

      .toolbar {
        display: flex;
        flex-flow: row;
        justify-content: center;

        .ui.button.dropdown,
        button {
          border: 1px solid #0000001f;
          margin-bottom: 0;
          background-color: #fff !important;
          color: #000;
          cursor: pointer;
        }
      }
    }

    .habitats-groups {
      margin-bottom: 1rem;
      background-color: #00a390;
      text-align: center;
      white-space: nowrap;

      button.habitats-group {
        padding: 1rem;
        border: none;
        background-color: transparent;
        color: #fff !important;
        cursor: pointer;
        font-size: 16px;
        text-transform: uppercase;

        &::after {
          display: block;
          width: calc(100% + 8px);
          height: 3px;
          margin-top: 2px;
          background: transparent;
          content: '';
          transform: translateX(-4px);
        }

        &.active,
        &:hover {
          &::after {
            background: #ffffff;
          }
        }
      }

      .ui.container {
        display: block;
        overflow-x: auto;
        text-align: center;
      }
    }

    .ui.sidebar {
      background-color: #fff !important;

      &.right.visible {
        z-index: 800;
        box-shadow: 0px 0px 13px -5px #000000;
      }

      .sidebar-header {
        display: flex;
        flex-flow: row;
        align-items: center;
        justify-content: space-between;
        padding: 2rem 1rem;
        background-color: #00a390;

        .title {
          margin-bottom: 0;
          color: #fff !important;
          font-size: 20px;
          font-weight: bold;
        }

        .clear-button {
          border: none;
          background-color: transparent;
          cursor: pointer;
        }
      }

      .filters {
        padding: 2rem 0;

        .filter {
          padding: 0 1rem 1rem 1rem;
          border-bottom: 2px solid #e0e0e0;
          margin-bottom: 2rem;

          .header {
            padding: 0;
            margin-bottom: 2rem;
            background-color: transparent;

            .title {
              color: #000;
              font-weight: 600;

              .reset-button {
                border: none;
                margin-left: 1rem;
                background-color: transparent;
                color: #00a390;
                cursor: pointer;

                &:hover {
                  opacity: 0.8;
                }
              }
            }
          }

          .checkbox-wrapper {
            display: flex;
            align-items: center;
            justify-content: space-between;
            margin-bottom: 1rem;

            .count {
              color: #636363;
            }
          }
        }
      }
    }
  }

  .habitats-list {
    .ui.grid.habitats {
      margin-top: 0;
      margin-right: 0;
      margin-bottom: 0;

      .row {
        padding: 1rem 0;
      }

      .habitats-photo {
        overflow: hidden;
        padding-right: 0;

        img {
          width: 100%;
          height: 100%;
          border-bottom-left-radius: 10px;
          border-top-left-radius: 10px;
          object-fit: cover;

          @media only screen and (max-width: 767px) {
            border-bottom-left-radius: 0;
            border-top-left-radius: 10px;
            border-top-right-radius: 10px;
          }
        }
      }

      .habitats-details {
        display: flex;
        flex-flow: column;
        justify-content: space-between;
        padding: 0;
        background-color: #fff !important;
        border-bottom-right-radius: 10px;
        border-top-right-radius: 10px;

        @media only screen and (max-width: 767px) {
          margin-left: 0.625rem;
          border-bottom-left-radius: 10px;
          border-bottom-right-radius: 10;
          border-top-left-radius: 0;
          border-top-right-radius: 0;
        }

        .metadata {
          padding: 0 2rem;
          padding-top: 1rem;
          margin-bottom: 1rem;

          .name {
            margin-bottom: 1rem;

            a {
              color: #013c60;
              font-size: 25px;
              font-weight: 400;
            }

            .code-2000 {
              color: #0f8f22;
            }
          }

          .habitat-data:not(:last-child) {
            margin-bottom: 0.5rem;
          }
        }

        .footer-metadata {
          display: flex;
          padding: 1rem 2rem;
          border-top: 1px solid #e8e8e8;

          p:not(.last-child) {
            margin-right: 1rem;
          }
        }

        .metadata,
        .footer-metadata {
          .blue {
            color: #013c60;
          }

          .orange {
            color: #ff9300;
          }

          .green {
            color: #0f8f22;
          }
        }
      }
    }

    .ui.pagination.menu {
      width: 100%;
      justify-content: center;
      background-color: transparent;

      .item {
        &.active {
          color: #013c60;
          font-weight: bold;
        }
      }
    }

    .empty {
      margin-top: 3rem;
      margin-bottom: 3rem !important;
      text-align: left;
    }
  }
}

